Update all documentation for v2.0 web application
Complete rewrites to reflect the Spring Boot + React architecture:

- MP3Org_User_Guide.md: Full user guide for web app with all 5 tabs,
  duplicate resolution, bulk editing, audio fingerprinting
- INSTALLATION.md: Java 21, Node.js, Chromaprint setup with
  cross-platform instructions and gradle21 script documentation
- ARCHITECTURAL-PATTERNS.md: Spring Boot + React patterns, REST API
  design, WebSocket architecture, testing strategy
- testPlan.md: Web app testing with API tests, E2E scenarios,
  manual test cases
- work-in-progress.md: Updated status reflecting completed migration

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>